Update Profile and Links

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@ Well not much I can say here; just thanks for stopping by and have a great day!
                 <div class="contact">
                         <h2>Markus Opolka</h2>
                         <p>
-                        <br />  
+                        <br />
                         Straßburgerstr. 6<br />
                         90443 N&uuml;rnberg
                         </p>
@@ -43,12 +43,12 @@ Well not much I can say here; just thanks for stopping by and have a great day!
             </div>
         </div>
         <div id="footer">
-            <a href="index.html">// index</a>
-            <a href="about.html">// about and contact</a>
+            <a href="index.html">// Index</a>
+            <a href="about.html">// About and Contact</a>
             <a href="https://theoldreader.com/profile/ee29ef043b8414f06aa22616" target="_blank">// RSS Feed</a>
-            <a href="https://github.com/martialblog/" target="_blank">// github</a>
-            <a href="https://zweipunknull.de" target="_blank">// zweipunknull</a>
-            <div id="v">version 6.2</div>
+            <a href="https://github.com/martialblog/" target="_blank">// GitHub</a>
+            <a href="https://zweipunknull.de" target="_blank">// ZweiPunkNull</a>
+            <div id="v">version 6.3</div>
         </div>
     </body>
 </html>
