--- a/index.html
+++ b/index.html
@@ -25,20 +25,25 @@ Well not much I can say here; just thanks for stopping by and have a great day!
             <div class="view view-fancy">
                 <img src="images/profile.png" alt="markus"/>
                 <div class="mask">
-                    <h2>Markus Opolka</h2>
-                    <p>I'm going to build my own theme park with blackjack and hookers!</p>
-                    <!--<a href="jack.html" class="info">Gimme More</a>-->
+                  <h2>Markus Opolka</h2>
+                  <h3>Level 6 Linux Wizard</h3>
+                  <p>
+                    Cloak of Computational Linguistics</br>
+                    Python Staff of GIL</br>
+                    Bag of Holding</br>
+                    Knowledge of Emacs
+                  </p>
                 </div>
             </div>
             </div>
         </div>
         <div id="footer">
-            <a href="index.html">// index</a>
-            <a href="about.html">// about and contact</a>
+            <a href="index.html">// Index</a>
+            <a href="about.html">// About and Contact</a>
             <a href="https://theoldreader.com/profile/ee29ef043b8414f06aa22616" target="_blank">// RSS Feed</a>
-            <a href="https://github.com/martialblog/" target="_blank">// github</a>
-            <a href="https://zweipunknull.de" target="_blank">// zweipunknull</a>
-            <div id="v">version 6.2</div>
+            <a href="https://github.com/martialblog/" target="_blank">// GitHub</a>
+            <a href="https://zweipunknull.de" target="_blank">// ZweiPunkNull</a>
+            <div id="v">version 6.3</div>
         </div>
     </body>
 </html>
