--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ Well not much I can say here; just thanks for stopping by and have a great day!
                   <h2>Markus Opolka</h2>
                   <h3>Level 6 Linux Wizard</h3>
                   <p>
-                    Cloak of Computational Linguistics</br>
-                    Python Staff of GIL</br>
-                    Bag of Holding</br>
+                    Cloak of Computational Linguistics<br/>
+                    Python Staff of GIL<br/>
+                    Bag of Holding<br/>
                     Knowledge of Emacs
                   </p>
                 </div>
