--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ Well not much I can say here; just thanks for stopping by and have a great day!
                     Cloak of Computational Linguistics<br/>
                     Python Staff of GIL<br/>
                     Bag of Holding<br/>
-                    Knowledge of Emacs
+                    Knowledge of Emacs<br/>
+                    Prestidi-git-ation Spell
                   </p>
                 </div>
             </div>
