Revert "Remove PGP"
This reverts commit 48f40f8769b5bc87bb35ded15484e1fb33dae7e0.

--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
                             document.write('<a href="mailto:' + sto_user + '@' +sto_dom + '" >'+ sto_user + '@' +sto_dom +'<' + '/a>')
                             //-->
                         </script><noscript><p>no-spam-thanks@localhost</p></noscript>
+                        <p>PGP public key: <a href="markus@martialblog.de.pub.asc">direct link</a></p>
                 </div>
               </div>
             </div>
