Refactor landing page
 - Update Image
 - Remove About
 - Remove Google Font

--- a/index.html
+++ b/index.html
@@ -11,36 +11,42 @@
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" type="text/css" href="css/style.css" media="only screen and (min-width:720px)"/>
         <link rel="stylesheet" type="text/css" href="css/mobile.css" media="only screen and (max-width:720px)"/>
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css">
     </head>
     <body>
         <div class="container" id="index">
             <div class="main">
-            <h1>&#36; ls /home/martialblog/</h1>
+            <h1>&#36; cat /home/martialblog/about.txt</h1>
             <div class="view view-fancy">
                 <img src="images/profile.png" alt="markus"/>
                 <div class="mask">
                   <h2>Markus Opolka</h2>
-                  <h3>Level 6 Linux Wizard</h3>
+                  <h3>Level 7 Linux Wizard</h3>
                   <p>
                     Cloak of Computational Linguistics<br/>
-                    Python Staff of GIL<br/>
-                    Bag of Holding<br/>
                     Knowledge of Emacs<br/>
-                    Prestidi-git-ation Spell
+                    Python Staff of GIL<br/>
+                    Amulet of the Gopher<br/>
+                    Spellbook: Prestidi-git-ation, Summon k8s, Dispel Legacy
                   </p>
+                  <h2>Contact</h2>
+                  <script type="text/javascript">
+  <!--
+                    sto_dom='martialblog.de'
+                    sto_user='markus'
+                    document.write('<a href="mailto:' + sto_user + '@' +sto_dom + '" >'+ sto_user + '@' +sto_dom +'<' + '/a>')
+                    //-->
+                  </script><noscript><p>no-spam-thanks@localhost</p></noscript>
+                  <p>PGP public key: <a href="markus@martialblog.de.pub.asc">direct link</a></p>
                 </div>
             </div>
             </div>
         </div>
         <div id="footer">
             <a href="index.html">// Index</a>
-            <a href="about.html">// About and Contact</a>
-            <a href="https://theoldreader.com/profile/ee29ef043b8414f06aa22616" target="_blank">// RSS Feed</a>
-            <a href="https://player.fm/martialblog/fm" target="_blank">// Podcasts</a>
             <a href="https://github.com/martialblog/" target="_blank">// GitHub</a>
+            <a href="https://theoldreader.com/profile/ee29ef043b8414f06aa22616" target="_blank">// RSS Feed</a>
             <a href="https://zweipunknull.de" target="_blank">// ZweiPunkNull</a>
-            <div id="v">version 6.3</div>
+            <div id="v">version 7.0</div>
         </div>
     </body>
 </html>
