--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
                   <h2>Contact</h2>
                   <script type="text/javascript">
   <!--
-                    sto_dom='martialblog.de'
-                    sto_user='markus'
+                    sto_dom='gmail.com'
+                    sto_user='markus.martialblog'
                     document.write('<a href="mailto:' + sto_user + '@' +sto_dom + '" >'+ sto_user + '@' +sto_dom +'<' + '/a>')
                     //-->
                   </script><noscript><p>no-spam-thanks@localhost</p></noscript>
-                  <p>PGP public key: <a href="markus@martialblog.de.pub.asc">direct link</a></p>
                 </div>
             </div>
             </div>
